--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'none'; img-src 'self' data: https://mypartyapp.s3.us-east-1.amazonaws.com; script-src 'self'; style-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com 'unsafe-inline'; connect-src 'self' https://party-map-backend.vercel.app https://mypartyapp.s3.us-east-1.amazonaws.com; font-src 'self' https://fonts.gstatic.com"
+          "value": "default-src 'none'; img-src 'self' data: https://mypartyapp.s3.us-east-1.amazonaws.com; script-src 'self'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://party-map-backend.vercel.app https://mypartyapp.s3.us-east-1.amazonaws.com"
         }
       ]
     }
