--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,16 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'none'; img-src 'self' data: https://mypartyapp.s3.us-east-1.amazonaws.com; script-src 'self'; style-src 'self'; connect-src 'self' https://party-map-backend.vercel.app https://mypartyapp.s3.us-east-1.amazonaws.com"
+          "value": "default-src 'self'; img-src 'self' data: blob: https://mypartyapp.s3.us-east-1.amazonaws.com; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; connect-src 'self' https://party-map-backend.vercel.app https://mypartyapp.s3.us-east-1.amazonaws.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'"
+        }
+      ]
+    },
+    {
+      "source": "/fonts/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
